--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
