--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.20.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
@@ -20,6 +21,8 @@
     "minimist": "^1.2.5",
     "mongoose": "^5.9.5",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "nodemon": "^2.0.2"
   }
 }
